- increased max heap space of the jvm for jetty server in the scripts - adjusted garbage creation to match the new test values - changed atrt-up script to create gc log
Change-Id: Ic6c0cadd8c3b99151073f39a31aad0d77eceea6d